# py-css-styleguide

./: .gitignore  .readthedocs.yml  CHANGELOG.rst  LICENCE.txt  MANIFEST.in  Makefile  README.rst  cookiebaked.json  freezer.py  frozen.txt  setup.cfg  setup.py  sphinx_reload.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: Makefile  basics.rst  build_requirements.py  changelog.rst  cli.rst  conf.py  development.rst  index.rst  install.rst  migrations.rst  overview.rst  references.rst  requirements.txt  sass_library.rst  sphinx_reload.py  usage.rst
docs/api/: django.rst  index.rst  model.rst  nomenclature.rst  parser.rst  serializer.rst
docs/manifest/: index.rst  item_separator.rst  serialization_structures.rst
docs/usage/: auto_excludes.rst  auto_full.rst  explicit_names.rst  index.rst
py_css_styleguide/: __init__.py  exceptions.py  manifest.py  model.py  nomenclature.py  parser.py  serializer.py
py_css_styleguide/cli/: entrypoint.py  greet.py  parse.py  version.py
py_css_styleguide/django/: mixin.py  views.py
py_css_styleguide/scss/: _styleguide_helpers.scss
py_css_styleguide/scss/dartsass/: _styleguide_helpers.scss
py_css_styleguide/scss/libsass/: _styleguide_helpers.scss
requirements/: dev.txt  tests.txt
sandbox/: urls.py
sandbox/settings/: base.py  tests.py
sandbox/static/: manifest_sample.css
tests/: 001_ast_eval.py  010_source_parser.py  011_nomenclature.py  020_css_serializer.py  030_manifest.py  040_sass_helper.py  100_django.py  __init__.py  conftest.py
tests/0010_parser/: 0012_css_parser.py
tests/0020_serializer/: 0021_base.py  0022_splitter.py  0023_structure_string.py  0024_structure_list.py  0025_structure_flat.py  0026_structure_nested.py  0027_structure_complex.py  0028_serializer.py  0028_structure_number.py
tests/0030_manifest/: 0031_load.py  0032_dump.py
tests/0040_compilers/: 0041_boussole.py
tests/0100_contribs/: 0101_django.py
tests/0200_cli/: 0201_cli_version.py  0210_parser.py
tests/data_fixtures/: manifest_invalid.json  manifest_sample.css  manifest_sample.json
tests/data_fixtures/json/: sample_dartsass.json  sample_excludes.json  sample_libsass.json  sample_names.json  styleguide_manifest_excludes.json  styleguide_manifest_full.json  styleguide_manifest_names.json
tests/data_fixtures/sass/: settings.json
tests/data_fixtures/sass/css/: sample_dartsass.css  sample_excludes.css  sample_libsass.css  sample_names.css  styleguide_manifest.css  styleguide_manifest_excludes.css  styleguide_manifest_full.css  styleguide_manifest_names.css
tests/data_fixtures/sass/scss/: _dartsass_styleguide_helpers.scss  _libsass_styleguide_helpers.scss  _settings.scss  _styleguide_helpers.scss  sample_dartsass.scss  sample_excludes.scss  sample_libsass.scss  sample_names.scss  styleguide_manifest.scss  styleguide_manifest_excludes.scss  styleguide_manifest_full.scss  styleguide_manifest_names.scss
