;;
;; PyCssStyleguide package
;;
[metadata]
name = py-css-styleguide
version = 0.7.0-pre.1
description = CSS Manifest driven styleguide for your project
long_description = file:README.rst
long_description_content_type = text/x-rst
author = David Thenon
author_email = sveetch@gmail.com
url = https://github.com/sveetch/py-css-styleguide
license = MIT
keywords = CSS, Sass, Scss, Styleguide

classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    Topic :: Internet
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = True
install_requires =
    tinycss2>=1.1.0
packages = find:
zip_safe = True

[options.extras_require]
dev =
    boussole
    flake8
    pytest
    pytest-django
    factory-boy
    pyquery
    freezegun
    sphinx
    sphinx-rtd-theme
    livereload
    twine

[options.packages.find]
where = .
exclude=
    docs
    tests

[wheel]
universal = 0

;;
;; Third-party packages configuration
;;
[flake8]
max-line-length = 88
exclude =
    .git,
    .venv,
    build,
    __pycache__

[tool:pytest]
addopts = -vv
python_files =
    *.py
testpaths =
    tests

[tox:tox]
minversion = 3.4.0
envlist = py{36,37,38}

[testenv]

commands =
    pip install -e .[dev]
    pytest -vv tests
