;;
;; PyCssStyleguide package
;;
[metadata]
name = py-css-styleguide
version = 1.0.0-pre.8
description = CSS driven styleguide for your project
long_description = file:README.rst
long_description_content_type = text/x-rst
author = David Thenon
author_email = sveetch@gmail.com
url = https://github.com/sveetch/py-css-styleguide
project_urls =
    Source Code = https://github.com/sveetch/py-css-styleguide
    Issue Tracker = https://github.com/sveetch/py-css-styleguide/issues
    Changelog = https://pycssstyleguide.readthedocs.io/en/latest/history.html
    Documentation = https://pycssstyleguide.readthedocs.io/
license = MIT
keywords = CSS, Python, Sass, Scss, Styleguide
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
include_package_data = True
python_requires = >=3.8
install_requires =
    tinycss2>=1.1.0
packages = find:
zip_safe = True

[options.extras_require]
dev =
    boussole
    pytest
    pytest-django
    freezegun
    Django>=2.2,<3.2
quality =
    flake8
    tox
    twine
doc =
    sphinx
    furo==2023.7.26
    sphinx-copybutton==0.5.2
    livereload

[options.packages.find]
where = .
exclude=
    data
    docs
    tests
    sandbox

[wheel]
universal = 0

;;
;; Third-party packages configuration
;;
[flake8]
max-line-length = 88
extend-ignore = E203
exclude =
    .git,
    .venv,
    build,
    __pycache__

[tool:pytest]
DJANGO_SETTINGS_MODULE = sandbox.settings.tests
addopts = -vv
python_files =
    *.py
testpaths =
    tests

[tox:tox]
minversion = 3.4.0
envlist =  py{38,310}

[testenv]

commands =
    pip install -e .[dev]
    pytest -vv tests
