;;
;; PyCssStyleguide package
;;
[metadata]
name = py-css-styleguide
version = 1.2.0-pre.2
description = CSS driven styleguide for your project
long_description = file:README.rst
long_description_content_type = text/x-rst
author = David Thenon
author_email = sveetch@gmail.com
url = https://github.com/sveetch/py-css-styleguide
project_urls =
    Source Code = https://github.com/sveetch/py-css-styleguide
    Issue Tracker = https://github.com/sveetch/py-css-styleguide/issues
    Changelog = https://pycssstyleguide.readthedocs.io/en/latest/history.html
    Documentation = https://pycssstyleguide.readthedocs.io/
license = MIT
keywords = CSS, Python, Sass, Scss, Styleguide
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
include_package_data = True
python_requires = >=3.8
install_requires =
    tinycss2>=1.1.0
    click>=8.0
    colorlog>=6.8.2
packages = find:
zip_safe = True

[options.extras_require]
dev =
    boussole>=2.1.0,<3.0.0
    pytest>=7.0
    pytest-django>=4.5.2
    freezegun>=1.2.0
django =
    Django>=2.2
quality =
    flake8>=6.0.0
    tox>=4.11.0
doc =
    sphinx>=8.0.2
    furo>=2024.8.6
    sphinx-copybutton>=0.5.2
doc-live =
    livereload>=2.6.0
release =
    twine>=5.0.0

[options.packages.find]
where = .
exclude=
    data
    docs
    tests
    sandbox

[options.entry_points]
console_scripts =
    styleguide = py_css_styleguide.cli.entrypoint:cli_frontend

[wheel]
universal = 0

;;
;; Third-party packages configuration
;;
[flake8]
max-line-length = 88
exclude =
    .git,
    .venv,
    build,
    __pycache__

[tool:pytest]
DJANGO_SETTINGS_MODULE = sandbox.settings.tests
addopts = -v --tb=long
python_files =
    *.py
testpaths =
    tests

[tox:tox]
minversion = 3.4.0
envlist =  py{38,311}-django{22,51}

[testenv]

deps =
    django22: Django>=2.2,<3.0
    django42: Django>=4.2,<5.0
    django51: Django>=5.1,<5.2

commands =
    pip install -e .[dev,django]
    pytest -vv tests
